<resources>
    <string name="app_name">tad</string>
    <string name="register">"Register"</string>
    <string name="email_address">"Email Address"</string>
    <string name="password">"Password"</string>
    <string name="already_registered">Already registered? Log In"</string>
    <string name="sign_out">"Sign Out"</string>
    <string name="user_name">"User Name"</string>
    <string name="country">"Country"</string>
    <string name="state">"State"</string>
    <string name="city">"City"</string>
    <string name="reset_password">"Reset Password"</string>
    <string name="login">"Log In"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>