<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/picturebuttonCreateProfileView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="120dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enterInformationTV"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_add_a_photo_black_24dp"
        android:elevation="5dp"
        android:padding="20dp"
        android:scaleType="centerCrop" />
    <TextView
        android:id="@+id/enterInformationTV"
        android:layout_width="335dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/picturebuttonCreateProfileView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="10dp"
        android:text="Enter profile information"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signOutBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="300dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toTopOf="@id/picturebuttonCreateProfileView">
    </Button>


    <EditText android:id="@+id/userNameCreateProfileET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/enterInformationTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="335dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="@string/user_name"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_firstName_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/userNameCreateProfileET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="335dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="First name"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_lastName_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/createProfile_firstName_ET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="335dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="Last name"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_addressLine1_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/createProfile_lastName_ET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="335dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="Street address"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_addressLine2_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/createProfile_addressLine1_ET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="335dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="Apt / Suite / Other"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_cityName_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/createProfile_addressLine2_ET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/createProfile_zipCode_ET"
        android:layout_width="155dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="@string/city"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_zipCode_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/createProfile_addressLine2_ET"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/createProfile_cityName_ET"
        android:layout_width="150dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="Zip code"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_stateName_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/createProfile_cityName_ET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/createProfile_countryName_ET"
        android:layout_width="155dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="@string/state"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_countryName_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/createProfile_cityName_ET"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/createProfile_stateName_ET"
        android:layout_width="150dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="@string/country"
        android:textColor="#6d6d6d"
        />

    <EditText android:id="@+id/createProfile_mobileNumber_ET"
        android:fontFamily="SF Pro Text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/createProfile_stateName_ET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="335dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="29dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/edit_text_bck_color"
        android:hint="Contact Number"
        android:textColor="#6d6d6d "
        />

    <Button
        android:id="@+id/createProfile_save_BTN"
        android:layout_width="335dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/etext_button_bck"
        android:backgroundTint="@color/btn_bck_color"
        app:layout_constraintTop_toBottomOf="@id/createProfile_mobileNumber_ET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="Save"
        android:fontFamily="SF Pro Text"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>